--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,7 @@
 @import '@fortawesome/fontawesome-free/css/regular.css';
 @import '@fortawesome/fontawesome-free/css/solid.css';
 @import '@fortawesome/fontawesome-free/css/brands.css';
+@import 'select2/dist/css/select2.css';
 
 @tailwind base;
 @tailwind components;
